# lxa

./: .clangd  .gitignore  AGENTS.md  AMIGA_COMMAND_GUIDE.md  CMakeLists.txt  LICENSE  Makefile  PHASE2_IMPLEMENTATION.md  README.md  build.sh  checkbox_gadget_spec.md  cmake_migration_plan.md  config.ini.example  config.mk.tmpl  roadmap.md  run-samples.sh  test3  test_shell  test_shell2
.opencode/skills/: develop_amiga.md  graphics_testing.md  lxa_testing.md  lxa_workflow.md
.ralph/: ralph-history.json  ralph-loop.state.json  ralph-tasks.md
C/: Makefile  makedir.c  type.c
Cluster:Projects/: StdProject
attic/: PHASE4_IMPLEMENTATION.md  README.md  cycle_gadget_spec.md  screenshot_review.py
cmake/: m68k-amigaos.cmake
doc/: README.md  app_compatibility.md  app_db.md  architecture.md  building.md  configuration.md  console_device.md  developer-guide.md  graphics_architecture.md  graphics_testing.md  phase23_graphics_audit.md  test-reliability-report.md  testing.md  ui_testing.md
samples/: CMakeLists.txt
samples/asl/: filereq.c  fontreq.c  screenmodereq.c
samples/devices/: askkeymap.c  simpletimer.c
samples/exec/: allocate.c  allocentry.c  buildlist.c  deviceuse.c  port1.c  port2.c  semaphore.c  signals.c  simpletask.c  tasklist.c  timersoftint.c
samples/expansion/: findboards.c
samples/graphics/: RGBBoxes.c  availfonts.c  clipping.c  measuretext.c  wbclone.c
samples/iffparse/: sift.c
samples/intuition/: backingstoretest.c  clonescreen.c  custompointer.c  doublebuffer.c  easyintuition.c  easyrequest.c  gadgetdisabled.c  gadtoolsgadgets.c  gadtoolsmenu.c  intuitext.c  layerbackfilltest.c  menulayout.c  mousetest.c  openwindowtags.c  propgadget.c  publicscreen.c  rawkey.c  setwindowtitles.c  shadowborder.c  simplegad.c  simplegtgadget.c  simpleimage.c  simplemenu.c  talk2boopsi.c  updatestrgad.c  visiblewindow.c  winpubscreen.c  zoomwindow.c
samples/math/: ffpexample.c  ffptrans.c  ieeedpexample.c
samples/utility/: a2d.c  hooks1.c  istr.c  tag1.c  uptime.c
share/lxa/: config.ini
src/: Makefile
src/bgui/: CMakeLists.txt  baseclass.c  blitter.c  buttonclass.c  classes.c  commodityclass.c  cycleclass.c  dgm.c  externalclass.c  frameclass.c  gfx.c  groupclass.c  lib.c  libfunc.c  listclass.c  lxa_shims.c  misc.c  miscc.c  mxclass.c  pageclass.c  propclass.c  request.c  stkext.c  strformat.c  stringclass.c  task.c  textclass.c  vectorclass.c  windowclass.c
src/bgui/CAD/: cad_main.c
src/bgui/build_include/bgui/: bgui.h  bgui_arexx.h  bgui_asl.h  bgui_compilerspecific.h  bgui_cx.h  bgui_image.h  bgui_layoutgroup.h  bgui_macros.h  bgui_obsolete.h
src/bgui/build_include/libraries/: bgui.h  bgui_bar.h  bgui_treeview.h
src/bgui/examples/: ARexxDemo.c  FieldList.h  IDCMPHook.c  MultiColumn.c  StringHook.c  ViewGroup.c
src/bgui/gadgets/Palette/: PaletteClass.c  PaletteDemo.c
src/bgui/gadgets/PopButton/: PopButtonClass.c
src/bgui/gadgets/TreeView/: TVExpand.c  TVLVHandlers.c  TVNewDispose.c  TestTreeView.c  TreeViewDemo.c
src/bgui/gadgets/TreeView/include/: TreeViewClass.h
src/bgui/gadgets/common/: bguiclass_lib.c
src/bgui/include/: bgui.h  bgui_arexx.h  bgui_compilerspecific.h  bgui_image.h  classdefs.h
src/bgui/include/aros/: class-protos.h
src/bgui/o/: bgui.library_rev.h
src/include/: emucalls.h  lxa_version.h
src/lxa/: CMakeLists.txt  Makefile  config.c  config.h  display.c  display.h  lxa.c  lxa_api.c  lxa_api.h  lxa_copper.c  lxa_copper.h  lxa_custom.c  lxa_dispatch.c  lxa_dos_host.c  lxa_events.c  lxa_internal.h  lxa_memory.h  lxa_profile.c  m68kconf.h  m68kcpu.h  m68kfpu.c  m68kmmu.h  m68kops.c  rootless_layout.c  rootless_layout.h  util.c  util.h  vfs.c  vfs.h
src/rom/: CMakeLists.txt  Makefile  amath.c  exceptions.h  exceptions.s  exec.c  lxa_amigaguide.c  lxa_arp.c  lxa_asl.c  lxa_commodities.c  lxa_datatypes.c  lxa_dev_audio.c  lxa_dev_clipboard.c  lxa_dev_console.c  lxa_dev_gameport.c  lxa_dev_input.c  lxa_dev_keyboard.c  lxa_dev_narrator.c  lxa_dev_parallel.c  lxa_dev_printer.c  lxa_dev_ramdrive.c  lxa_dev_scsi.c  lxa_dev_serial.c  lxa_dev_timer.c  lxa_dev_trackdisk.c  lxa_diskfont.c  lxa_dopus.c  lxa_dos.c  lxa_dos.h  lxa_expansion.c  lxa_gadtools.c  lxa_graphics.c  lxa_icon.c  lxa_iffparse.c  lxa_intuition.c  lxa_keymap.c  lxa_layers.c  lxa_locale.c  lxa_mathffp.c  lxa_mathieeedoubbas.c  (+16 more)
src/samples/: hello.c
sys/: CMakeLists.txt
sys/C/: assign.c  avail.c  break.c  changetaskpri.c  copy.c  date.c  delete.c  dir.c  eval.c  filenote.c  getenv.c  info.c  join.c  list.c  makedir.c  makelink.c  protect.c  rename.c  requestchoice.c  resident.c  run.c  search.c  set.c  setenv.c  sort.c  stack.c  status.c  type.c  unset.c  unsetenv.c  version.c  wait.c
sys/Libs/: disklib_support.c
sys/System/: Makefile  Shell  Shell.c
tests/: Makefile  Makefile.config  compare_screenshots.sh  generate_test_report.sh  run_apps.py  test_runner.sh  test_runner_with_args.sh
tests/apps/: COMPATIBILITY.md  app_test_runner.sh
tests/common/: test_assert.h  test_inject.h
tests/console/: Makefile
tests/console_advanced/: Makefile  (+3 more)
tests/drivers/: CMakeLists.txt  api_gtest.cpp  api_test.c  apps_misc_gtest.cpp  asm_one_gtest.cpp  asm_one_test.c  backingstore_gtest.cpp  blitzbasic2_gtest.cpp  cluster2_gtest.cpp  cluster2_test.c  commands_gtest.cpp  console_gtest.cpp  custompointer_gtest.cpp  custompointer_test.c  datatypes_gtest.cpp  devices_gtest.cpp  devpac_gtest.cpp  devpac_scrollbar_gtest.cpp  devpac_settings_gtest.cpp  devpac_test.c  dopus_gtest.cpp  dos_gtest.cpp  dpaint_gtest.cpp  dpaint_test.c  easyrequest_gtest.cpp  exec_gtest.cpp  filereq_gtest.cpp  filereq_test.c  finalwriter_gtest.cpp  fontreq_gtest.cpp  gadget_disabled_gtest.cpp  gadtools_gtest.cpp  gadtoolsgadgets_gtest.cpp  gadtoolsmenu_gtest.cpp  gadtoolsmenu_test.c  graphics_gtest.cpp  intuitext_gtest.cpp  intuition_gtest.cpp  kickpascal_gtest.cpp  kickpascal_test.c  (+34 more)
tests/unit/: CMakeLists.txt  stubs.c  test_config.c  test_memory.c  test_rootless_layout.c  test_util.c  test_vfs.c
tests/unit/unity/: unity.c  unity.h
tools/: check_shard_coverage.py  profile_report.py
(+728 files in other folders)
